# SlicerLanguagePacks

./: AdvancedUse.md  AdvancedUse_esp.md  AdvancedUse_fr.md  AdvancedUse_pt-br.md  CMakeLists.txt  DevelopersManual.md  DevelopersManual_esp.md  DevelopersManual_fr.md  DevelopersManual_pt-br.md  Glossary.md  Glossary_es.md  Glossary_fr.md  Glossary_pt-br.md  HowToUse.md  HowToUse_es_419.md  HowToUse_fr.md  HowToUse_pt-br.md  LICENSE  Module translation lookup table  Module translation lookup table.md  Module translation lookup table_fr.md  Module translation lookup table_pt-br.md  README.md  READMEfrench.md  TranslationGuidelines-esp.md  TranslationGuidelines.md  TranslationGuidelines_fr.md  TranslationGuidelines_hu.md  TranslationGuidelines_pt-br.md  TranslatorsManual.md
Docs/: Slicer-i18n-DataFlow.pptx
LanguageTools/: CMakeLists.txt  LanguageTools.py
LanguageTools/Resources/: CTK~vtkModalityWidget_LANG.ts
LanguageTools/Resources/UI/: LanguageTools.ui
LanguageTools/rtl/: RTLSupport.py
